--- a/.config/qtile/scripts/picom.conf
+++ b/.config/qtile/scripts/picom.conf
@@ -15,15 +15,15 @@ shadow = true;
 shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .55
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = 2;
+shadow-offset-x = 3;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -3;
+shadow-offset-y = 3;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
