--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Sweet-Dark
-gtk-icon-theme-name=Surfn-Breeze-Dark
+gtk-theme-name=Sweet-Dark-v40
+gtk-icon-theme-name=Sardi-Arc
 gtk-font-name=Noto Sans 11
 gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=0
@@ -13,4 +13,4 @@ gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=rgb
+gtk-xft-rgba=none
